2005-05-06  Christian Schaller  <uraeus@gnome.org>

	* configure.ac: add gst-plugins-libs

2005-05-06  Wim Taymans  <wim@fluendo.com>

	* configure.ac:
	* ext/sidplay/gstsiddec.cc:
	* ext/sidplay/gstsiddec.h:
	Ported sidplay.

2005-05-06  Christian Schaller  <uraeus@gnome.org>

	* configure.ac: 
	* ext/mad/Makefile.am: add linking of gstinterfaces
	* ext/mad/gstid3tag.c: (plugin_init): remove library_load
	* gst-plugins.spec.in: 
	* gst/effectv/Makefile.am: link to libgstvideofilter
	* gst/effectv/gsteffectv.c: (plugin_init): same as for mad
	* gst/videofilter/Makefile.am: make sure videoflip is not built

2005-05-06  Wim Taymans  <wim@fluendo.com>

	* gst/law/alaw-decode.c: (alawdec_getcaps), (alawdec_setcaps),
	(gst_alawdec_init), (gst_alawdec_chain):
	* gst/law/alaw-encode.c: (alawenc_getcaps), (alawenc_setcaps),
	(gst_alawenc_init), (gst_alawenc_chain):
	* gst/law/mulaw-decode.c: (mulawdec_getcaps), (mulawdec_setcaps),
	(gst_mulawdec_init), (gst_mulawdec_chain):
	* gst/law/mulaw-encode.c: (mulawenc_getcaps), (mulawenc_setcaps),
	(gst_mulawenc_init), (gst_mulawenc_chain):
	Ported alaw and mulaw plugins to 0.9, fixed the negotiation as
	well.

2005-05-06  Christian Schaller  <uraeus@gnome.org>

	* ext/alsa: removed plugins that are now in gst-plugins-base
	* ext/gnomevfs:
	* ext/theora:
	* ext/vorbis:
	* gst/adder:
	* gst/audioconvert:
	* gst/ffmpegcolorspace:
	* gst/typefind:
	* gst/videofilter: comment out videoflip and gamma plugins

2005-05-06  Christian Schaller  <uraeus@gnome.org>

	* gst-libs: Remove all files as this is in gst-plugins-base now
	* gst-libs/README: add a remove informing of this move

2005-05-06  Christian Schaller <uraeus@gnome.org> 

	* PORTED_09: update to add videofilter
	* configure.ac: re-add videofilter
	* gst/videofilter/Makefile.am: remove videobalance (not ported yet)
	* gst/videofilter/gstgamma.c: (gst_gamma_class_init):
	* gst/videofilter/gstvideobalance.c: (gst_videobalance_class_init):